--- a/TestingCodingExercise/TestingCodingExercise.csproj
+++ b/TestingCodingExercise/TestingCodingExercise.csproj
@@ -44,7 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FizzProvider.cs" />
     <Compile Include="FizzTests.cs" />
+    <Compile Include="IFizzProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
